--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.3",
-        "fluent/logger": "0.3.*",
-        "monolog/monolog": ">=1.6,<1.11"
+        "fluent/logger": "~0.3.0",
+        "monolog/monolog": "~1.11"
     },
     "autoload": {
         "psr-0": {
